# vision-transformers-auair

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  ruff.toml
vision_transformers_auair/: __main__.py
vision_transformers_auair/dataset/: loader.py
vision_transformers_auair/models/: backbone.py  detector.py  matcher.py  model.py  training_module.py
vision_transformers_auair/models/layers/: __init__.py  drop.py  helpers.py  weight_init.py
vision_transformers_auair/models/nn/: configuration_yolos.py  convert_yolos_to_pytorch.py  feature_extraction_yolos.py  image_processing_yolos.py  yolos.py
vision_transformers_auair/utils/: box_ops.py  debug.py  losses.py  misc.py  plot_utils.py  scheduler.py
